--- a/app/res/layout/fragment_cart_invoice.xml
+++ b/app/res/layout/fragment_cart_invoice.xml
@@ -34,6 +34,7 @@
 		        android:text="@string/cart_invoice_order"
 		        android:textAppearance="?android:attr/textAppearanceLarge" />
 	         <TextView
+	            android:id="@+id/invoiceId"
 		        android:layout_width="0dp"
 		        android:layout_weight="2"
 		        android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
 		        android:text="@string/cart_invoice_total_price"
 		        android:textAppearance="?android:attr/textAppearanceLarge" />
 	         <TextView
+	            android:id="@+id/invoicePrice" 
 		        android:layout_width="0dp"
 		        android:layout_weight="2"
 		        android:layout_height="wrap_content"
@@ -83,6 +85,7 @@
 		        android:layout_weight="1"
 		        android:layout_height="wrap_content" />
 	         <TextView
+	            android:id="@+id/invoiceShipAddress"
 		        android:layout_width="0dp"
 		        android:layout_weight="3"
 		        android:layout_height="wrap_content"
@@ -113,6 +116,7 @@
 		        android:layout_weight="1"
 		        android:layout_height="wrap_content" />
 	         <TextView
+	            android:id="@+id/invoiceCcNumber"
 		        android:layout_width="0dp"
 		        android:layout_weight="3"
 		        android:layout_height="wrap_content"
