Added admin user change

--- a/app/res/layout/dialog_user_info.xml
+++ b/app/res/layout/dialog_user_info.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
         android:ems="10"
+        android:enabled="false"
         android:singleLine="true" >
     </EditText>
 
